Fixing some minor layout issues

--- a/src/less/components/nav.less
+++ b/src/less/components/nav.less
@@ -28,7 +28,7 @@
 		width: 100%;
 		left: 0;
 		background-color: @color-primary;
-		background: linear-gradient(to right, @color-secondary, @color-primary);
+		background: linear-gradient(to right, @color-primary, @color-secondary);
 		transition-property: left, width;
 		transition-duration: .4s;
 		transition-timing-function: cubic-bezier(.22,.02,.04,1);
